syntax = "proto3";

package minimmit.v1;

// Empty message for requests that don't need parameters
message Empty {}

// Transaction types matching consensus::state::transaction::TransactionInstruction
enum TransactionType {
    TRANSACTION_TYPE_UNSPECIFIED = 0;
    TRANSACTION_TYPE_TRANSFER = 1;
    TRANSACTION_TYPE_MINT = 2;
    TRANSACTION_TYPE_BURN = 3;
    TRANSACTION_TYPE_CREATE_ACCOUNT = 4;
}

// Transaction information returned in queries
message TransactionInfo {
    // Transaction hash (hex-encoded, 32 bytes)
    string tx_hash = 1;
    // Sender address (hex-encoded, 32 bytes)
    string sender = 2;
    // Recipient address (hex-encoded, 32 bytes) - empty for some tx types
    string recipient = 3;
    // Amount transferred/minted/burned
    uint64 amount = 4;
    // Transaction fee
    uint64 fee = 5;
    // Sender's nonce for this transaction
    uint64 nonce = 6;
    // Transaction timestamp (unix milliseconds)
    uint64 timestamp = 7;
    // Transaction type
    TransactionType type = 8;
}

// Error codes for structured error handling
enum ErrorCode {
    ERROR_CODE_UNSPECIFIED = 0;
    ERROR_CODE_INVALID_SIGNATURE = 1;
    ERROR_CODE_INVALID_FORMAT = 2;
    ERROR_CODE_MEMPOOL_FULL = 3;
    ERROR_CODE_DUPLICATE_TRANSACTION = 4;
    ERROR_CODE_INSUFFICIENT_BALANCE = 5;
    ERROR_CODE_INVALID_NONCE = 6;
    ERROR_CODE_BROADCAST_FAILED = 7;
    ERROR_CODE_NOT_FOUND = 8;
    ERROR_CODE_INTERNAL = 9;
}
